--- a/README.adoc
+++ b/README.adoc
@@ -1,1 +1,20 @@
-# fidl2adoc
+= fidl2adoc
+
+== Introduction
+
+== Usage
+
+=== Dependencies
+
+=== Command line
+
+
+
+== Example
+
+=== FIDL Example
+
+=== ADOC Result
+
+== Future Changes
+
