--- a/README.adoc
+++ b/README.adoc
@@ -2,19 +2,30 @@
 
 == Introduction
 
+fidl2adoc is a Python script, which converts Franca IDL (.fidl) files into AsciiDoc (.adoc) files. It is using the Python library https://github.com/zayfod/pyfranca[PyFranca] to build an abstract syntax tree from the Franca IDL files and generates the complete documentation from the Franca IDL files into an output AsciiDoc file and adds links between Attributes, Methods, Datatypes etc., see example link:examples/Test.fidl[Test.fidl] with corresponding link:examples/Test.adoc[Test.adoc]. link:examples/Test.adoc[Test.adoc] can be viewed in Chrome with Asciidoctor.js extension.
+
 == Usage
 
 === Dependencies
+Latest version 0.4.1 of https://github.com/zayfod/pyfranca[PyFranca]
+To install the library, call:
+  
+  pip install pyfranca
 
 === Command line
 
+To generate Test.adoc from Test.fidl, call:
 
+  python ./fidl2adoc/fidl2adoc.py -i ./examples/Test.fidl -o ./examples/Test.adoc
 
-== Example
+== Limitations / Next steps
 
-=== FIDL Example
+The input files must be parsable with https://github.com/zayfod/pyfranca[PyFranca].
 
-=== ADOC Result
+The following Franca IDL features are not yet supported in fidl2adoc, but will be available in the future:
 
-== Future Changes
-
+. TypeCollections
+. Inline Array Definition
+. Broadcasts
+. Interface version
+. Out parameters from methods
