--- a/examples/Test.adoc
+++ b/examples/Test.adoc
@@ -13,10 +13,11 @@ Description of TestCollectionStruct
 Used in: 
 <<Test2-b1>>
 
-Struct fields: 
+Struct fields:
+
 [options="header",cols="20%,20%,60%"]
 |===
-|Type | Name | Description 
+|Type|Name|Description
 | String | structParam1 | 
 
 Description of structParam1
@@ -34,6 +35,7 @@ Description of structParam3
 [[TestTypes-TestCollectionEnum]]
 === Enumeration TestCollectionEnum
 
+
 Description of TestCollectionEnum
 
 Used in: 
@@ -43,9 +45,11 @@ Used in:
 , 
 <<Test-TestArrayType>>
 
+
+
 [options="header",cols="20%,20%,60%"]
 |===
-|Enumerator | Value | Description 
+|Enumerator|Values|Description
 |APP_1|0|
 
 Application 1
@@ -53,6 +57,7 @@ Application 1
 
 Application 2
 |===
+
 
 == Maps
 
@@ -74,14 +79,17 @@ Description of TestMap
 [[TestTypes2-TestCollectionEnum2]]
 === Enumeration TestCollectionEnum2
 
+
 Description of TestTypes2.TestCollectionEnum2
 
 Used in: 
 <<Test2-TestMap2>>
 
+
+
 [options="header",cols="20%,20%,60%"]
 |===
-|Enumerator | Value | Description 
+|Enumerator|Values|Description
 |ON|0|
 
 Enum is On
@@ -89,6 +97,7 @@ Enum is On
 
 Enum is off
 |===
+
 
 == Arrays
 
@@ -116,9 +125,9 @@ Interface description: Description of the Test interface
 
 == Attributes
 
-
 [[Test-testAttribute]]
 === Attribute testAttribute
+
 
 Attribute data type: Array of <<Test-TestType1>>
 
@@ -134,40 +143,45 @@ Server -> Client: set testAttribute
 ----
 
 See also: 
-<<Test-TestMethod>>
-
+<<Test-TestMethod>> 
 [[Test-testAttribute2]]
 === Attribute testAttribute2
+
 
 Attribute data type: <<Test-TestArrayType>>
 
 Attribute testAttribute has some description.
-
 
 == Methods
 
 [[Test-TestMethod]]
 === Method TestMethod
 
+
 Description of TestMethod.
 
-
 See also: 
-<<Test-testAttribute>>
+<<Test-testAttribute>> 
 
+Input Parameters:
 
-Input Parameters: 
 [options="header",cols="20%,20%,60%"]
 |===
-|Type | Name | Description 
-| <<Test-TestType2>> | testParameter | Description of the input parameter testParameter.
+|Type|Name|Description
+| <<Test-TestType2>> | testParameter | 
+
+Description of the input parameter testParameter.
 |===
 
-Output Parameters: 
+
+Output Parameters:
+
 [options="header",cols="20%,20%,60%"]
 |===
-|Type | Name | Description 
-| String | testParameter2 | Description of the out parameter testParameter2.
+|Type|Name|Description
+| String | testParameter2 | 
+
+Description of the out parameter testParameter2.
 |===
 
 
@@ -182,10 +196,11 @@ Description of TestType2
 Used in: 
 <<Test-TestMethod>>
 
-Struct fields: 
+Struct fields:
+
 [options="header",cols="20%,20%,60%"]
 |===
-|Type | Name | Description 
+|Type|Name|Description
 | String | structParam1 | 
 
 Description of structParam1
@@ -203,6 +218,7 @@ Description of structParam3
 [[Test-TestType1]]
 === Enumeration TestType1
 
+
 Description of TestType1
 
 Used in: 
@@ -210,9 +226,11 @@ Used in:
 , 
 <<Test-TestType2>>
 
+
+
 [options="header",cols="20%,20%,60%"]
 |===
-|Enumerator | Value | Description 
+|Enumerator|Values|Description
 |INIT|0|
 
 Description of INIT
@@ -229,6 +247,7 @@ Description of SHUTDOWN
 
 Description of NONE
 |===
+
 
 == Arrays
 
@@ -256,9 +275,9 @@ Interface description: Description of the Test interface
 
 == Attributes
 
-
 [[Test2-testAttribute]]
 === Attribute testAttribute
+
 
 Attribute data type: Array of String
 
@@ -273,45 +292,46 @@ Client -> Server: testMethod(params)
 Server -> Client: set testAttribute
 ----
 
-
 == Methods
 
 [[Test2-TestMethodNoArgs]]
 === Method TestMethodNoArgs
 
+
 Description of TestMethodNoArgs.
 
-
 See also: 
-<<Test2-b1>>
-
-
+<<Test2-b1>> 
 
 == Broadcasts
 
 [[Test2-b1]]
 === Broadcast b1
 
+
 Description of broadcast b1
 
-
 See also: 
-<<Test2-TestMethodNoArgs>>
+<<Test2-TestMethodNoArgs>> 
 
+Output Parameters:
 
-Output Parameters: 
 [options="header",cols="20%,20%,60%"]
 |===
-|Type | Name | Description 
-| <<TestTypes-TestCollectionStruct>> | mb1 | Description of broadcast b1.mb1
-| Array of <<TestTypes2-TestArrayType2>> | mb2 | Description of broadcast b1.mb2
+|Type|Name|Description
+| <<TestTypes-TestCollectionStruct>> | mb1 | 
+
+Description of broadcast b1.mb1
+| Array of <<TestTypes2-TestArrayType2>> | mb2 | 
+
+Description of broadcast b1.mb2
 |===
 
 [[Test2-bNoArgs]]
 === Broadcast bNoArgs
 
-Description of broadcast b1NoArgs
 
+Description of broadcast b1NoArgs
 
 == Maps
 
